--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,7 @@
-[package]
-name = "caravel"
-version = "0.1.0"
-edition = "2021"
+[workspace]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-thread-priority = "0.15.0"
-scheduler = "0.1.3"
+members = [
+    "caravel",
+    #    "caravel_derive",
+    "tests",
+]
