--- a/caravel/Cargo.toml
+++ b/caravel/Cargo.toml
@@ -2,9 +2,13 @@
 name = "caravel"
 version = "0.1.0"
 edition = "2021"
+description = "A MAS based applications framework"
+repository = "https://github.com/DRoMarin/caravela"
+readme = "README.md"
+license = "MIT OR Apache-2.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 thread-priority = "0.15.0"
-scheduler = "0.1.3"
+#scheduler = "0.1.3"
