--- a/caravela/Cargo.toml
+++ b/caravela/Cargo.toml
@@ -7,6 +7,8 @@ repository = "https://github.com/DRoMarin/caravela"
 readme = "README.md"
 license = "MIT OR Apache-2.0"
 
+exclude = ["src/entity,service/organizations.rs"]
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
