--- a/caravela/Cargo.toml
+++ b/caravela/Cargo.toml
@@ -13,3 +13,10 @@ exclude = ["src/entity/service/organization.rs"]
 [dependencies]
 thread-priority = "0.15.0"
 #scheduler = "0.1.3"
+
+[features]
+dbg-probe = []
+dbg-status = []
+dbg-messaging = []
+dbg-default = []
+dbg-all = ["dbg-probe", "dbg-status", "dbg-messaging", "dbg-default"]
