--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,11 @@ resolver = "2"
 
 members = [
     "caravela",
+    "examples/*",
     #    "caravel_derive",
     "tests",
 ]
 
 [patch.crates-io]
-libc = {git = "https://github.com/DRoMarin/libc.git", branch = "vxworks/sched"}
-thread-priority = {git = "https://github.com/DRoMarin/thread-priority.git", branch = "vxworks-support"}
+libc = { git = "https://github.com/DRoMarin/libc.git", branch = "vxworks/sched" }
+thread-priority = { git = "https://github.com/DRoMarin/thread-priority.git", branch = "vxworks-support" }
