--- a/examples/sender-receiver/Cargo.toml
+++ b/examples/sender-receiver/Cargo.toml
@@ -4,4 +4,4 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-caravela = { path = "../../caravela", features=["dbg-probe"]}
+caravela = { path = "../../caravela", features=["dbg-all"]}
