--- a/caravela/Cargo.toml
+++ b/caravela/Cargo.toml
@@ -16,6 +16,7 @@ thread-priority = "1.0.0"
 #scheduler = "0.1.3"
 
 [features]
+organizations = []
 dbg-probe = []
 dbg-status = []
 dbg-messaging = []
